# Project-Encryption-Software

./: LICENSE.txt  README.md
EFI/: DcsPkg.dec  DcsPkg.dsc  DcsPkg.uni  Dcs_bld.bat  bld.bat
EFI/DcsBml/: ComponentName.c  ComponentName.h  DcsBml.c  DcsBml.h  DcsBml.inf
EFI/DcsBoot/: DcsBoot.c  DcsBoot.inf
EFI/DcsCfg/: DcsCfg.h  DcsCfg.inf  DcsCfg.man  DcsCfgBeep.c  DcsCfgBlockio.c  DcsCfgCrypt.c  DcsCfgGraphics.c  DcsCfgMain.c  DcsCfgSetup.c  DcsCfgTouch.c  DcsCfgTpm.c
EFI/DcsInfo/: DcsInfo.c  DcsInfo.inf
EFI/DcsInt/: DcsInt.c  DcsInt.h  DcsInt.inf  DcsIntName.c
EFI/DcsRe/: DcsRe.c  DcsRe.inf
EFI/Include/Protocol/: ConsoleControl.h  DcsBmlProto.h  Speaker.h
EFI/LegacySpeaker/: ComponentName.c  ComponentName.h  LegacySpeaker.c  LegacySpeaker.h  LegacySpeaker.inf
EFI/SecureBoot/: readme.txt  sb_set_siglists.ps1
S.S.E/: (SevenZip) - Public Domain License.txt  (at.gadermaier...) - MIT License.txt  (sse.org.bouncycastle...) - MIT License.txt
S.S.E/CryptoLibs/jni-Blake3/BLAKE3Core/: Cargo.toml
S.S.E/CryptoLibs/jni-Blake3/blake3jni/: Cargo.toml
S.S.E/CryptoLibs/jni-Blake3/blake3jni/src/: lib.rs  main.rs
S.S.E/CryptoLibs/src/: io.rar
S.S.E/F5Steg/: (f5...) - LGPL License.txt
S.S.E/SSEBaseEngine/src/ext/: AnimatedIcon.java  Base32EAM.java  Base64.java  RelativeLayout.java
S.S.E/SSEBaseEngine/src/rescore/: SSEBaseEngineText.properties  SSEBaseEngineText_de.properties  SSEBaseEngineText_el.properties  SSEBaseEngineText_es.properties  SSEBaseEngineText_fr.properties  SSEBaseEngineText_hi.properties  (+9 more)
S.S.E/SSETextGUI/: Paranoia_Works_License.txt
(+134 files in other folders)
