[package]
name = "blake3jni"
version = "1.3.1"
authors = ["Paranoia Works"]
description = "BLAKE3 hash function for Paranoia File Encryption"
license = "CC0-1.0 OR Apache-2.0"
edition = "2018"

[features]
neon = ["blake3/neon"]

[dependencies]
blake3 = { version = "1", path = "../BLAKE3Core", features = ["rayon"] }
rayon = "1.2.1"
jni = "0.19.0"

[dev-dependencies]
#duct = "0.13.3"
#tempfile = "3.1.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
strip = true
#strip = "debuginfo"
panic = "abort"
codegen-units = 1


[lib]
path = "src/lib.rs"
name = "blake3mt"
crate-type = ["cdylib"]
